--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,7 +16,7 @@
             <a class="nav-link {% if page.url contains 'publication' %} active {% endif %}" aria-current="page" href="/publication">Publication</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link {% if page.url contains 'news' %} active {% endif %}" aria-current="page" href="/cv.pdf">CV</a>
+            <a class="nav-link {% if page.url contains 'news' %} active {% endif %}" aria-current="page" href="/cv">CV</a>
           </li>
         </ul>
       </div>
