--- a/_includes/head.html
+++ b/_includes/head.html
@@ -21,9 +21,9 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
 
   <!-- Favicon -->
-  <link rel="apple-touch-icon" sizes="180x180" href=" {{ '/assets/images/main/favicon/apple-touch-icon.png' | relative_url }}">
-  <link rel="icon" type="image/png" sizes="32x32" href=" {{ '/assets/images/main/favicon/favicon-32x32.png' | relative_url }}">
-  <link rel="icon" type="image/png" sizes="16x16" href=" {{ '/assets/images/main/favicon/favicon-16x16.png' | relative_url }}">
+  <link rel="apple-touch-icon" sizes="180x180" href=" {{ '/assets/images/main/avatar.png' | relative_url }}">
+  <link rel="icon" type="image/png" sizes="32x32" href=" {{ '/assets/images/main/avatar.png' | relative_url }}">
+  <link rel="icon" type="image/png" sizes="16x16" href=" {{ '/assets/images/main/avatar.png' | relative_url }}">
   <link rel="manifest" href=" {{ '/assets/images/main/favicon/site.webmanifest' | relative_url }}">
   <link rel="mask-icon" href=" {{ '/assets/images/main/favicon/safari-pinned-tab.svg' | relative_url }}" color="#777777">
   <meta name="msapplication-TileColor" content="#ffc40d">
@@ -31,5 +31,5 @@
 
   <!-- Opengraph -->
   <meta property="og:type" content="website">
-  <meta property="og:image" content="{{ '/assets/images/main/opengraph.jpg' | relative_url }}">
+  <meta property="og:image" content="{{ '/assets/images/main/avatar.png' | relative_url }}">
 </head>
