--- a/_includes/head.html
+++ b/_includes/head.html
@@ -21,12 +21,12 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
 
   <!-- Favicon -->
-  <link rel="apple-touch-icon" sizes="180x180" href=" {{ '/assets/images/main/pink-tiger.png' | relative_url }}">
-  <link rel="icon" type="image/png" sizes="32x32" href=" {{ '/assets/images/main/pink-tiger.png' | relative_url }}">
-  <link rel="icon" type="image/png" sizes="16x16" href=" {{ '/assets/images/main/pink-tiger.png' | relative_url }}">
+  <link rel="apple-touch-icon" sizes="180x180" href=" {{ '/assets/images/main/favicon/apple-touch-icon.png' | relative_url }}">
+  <link rel="icon" type="image/png" sizes="32x32" href=" {{ '/assets/images/main/favicon/favicon-32x32.png' | relative_url }}">
+  <link rel="icon" type="image/png" sizes="16x16" href=" {{ '/assets/images/main/favicon/favicon-16x16.png' | relative_url }}">
   <link rel="manifest" href=" {{ '/assets/images/main/favicon/site.webmanifest' | relative_url }}">
-  <link rel="mask-icon" href=" {{ '/assets/images/main/favicon/safari-pinned-tab.svg' | relative_url }}" color="#777777">
-  <meta name="msapplication-TileColor" content="#ffc40d">
+  <link rel="mask-icon" href=" {{ '/assets/images/main/favicon/safari-pinned-tab.svg' | relative_url }}" color="#333333">
+  <meta name="msapplication-TileColor" content="#da532c">
   <meta name="theme-color" content="#ffffff">
 
   <!-- Opengraph -->
