Fix header menu highlighting issue

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,13 +10,13 @@
       <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
         <ul class="navbar-nav ml-auto mt-4 mt-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
           <li class="nav-item">
-            <a class="nav-link {% if page.url contains 'research' %} active {% endif %}" aria-current="page" href="/project">Project</a>
+            <a class="nav-link {% if page.url contains 'project' %} active {% endif %}" aria-current="page" href="/project">Project</a>
           </li>
           <li class="nav-item">
             <a class="nav-link {% if page.url contains 'publication' %} active {% endif %}" aria-current="page" href="/publication">Publication</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link {% if page.url contains 'news' %} active {% endif %}" aria-current="page" href="/cv">CV</a>
+            <a class="nav-link {% if page.url contains 'cv' %} active {% endif %}" aria-current="page" href="/cv">CV</a>
           </li>
         </ul>
       </div>
