modified project page

--- a/_layouts/project-detail.html
+++ b/_layouts/project-detail.html
@@ -11,7 +11,7 @@ layout: default
             <p class="mt-2" style="font-size: 0.8rem; font-style: italic;">{{ page.type }}</p>
             <p class="mt-2" style="font-size: 1rem; font-weight: 500 !important;">{{ page.title }}</p>
             <p class="mt-2" style="font-size: 1rem;">{{ page.content }}</p>
-            <p class="mt-2" style="font-size: 1rem;">{{ page.date }}</p>
+            <p class="mt-2" style="font-size: 1rem;">{{ page.status }}</p>
             <p class="mt-2" style="font-size: 1rem;">{{ page.collaborator }}</p>
             <p class="mt-2" style="font-size: 1rem;">{{ page.advisor }}</p>
         </div>
