--- a/_layouts/project-detail.html
+++ b/_layouts/project-detail.html
@@ -2,18 +2,60 @@
 layout: default
 ---
 
+{% assign project = site.data.research-project.project | where: "slug", page.slug | first %}
+
 <div class="container py-4">
     <div class="row mt-5">
-        <div class="col-12 col-md-3 mb-3 mb-md-0 align-self-center">
-            <img src="{{ '/assets/images/research_project/' | append: page.image | relative_url }}" alt="{{ page.alt }}" style="height: auto; width: 100%;">
-        </div>
-        <div class="col-12 col-md-9 mb-3 mb-md-0 align-self-center">
-            <p class="mt-2" style="font-size: 0.8rem; font-style: italic;">{{ page.type }}</p>
-            <p class="mt-2" style="font-size: 1rem; font-weight: 500 !important;">{{ page.title }}</p>
-            <p class="mt-2" style="font-size: 1rem;">{{ page.content }}</p>
-            <p class="mt-2" style="font-size: 1rem;">{{ page.status }}</p>
-            <p class="mt-2" style="font-size: 1rem;">{{ page.collaborator }}</p>
-            <p class="mt-2" style="font-size: 1rem;">{{ page.advisor }}</p>
+        
+        <div class="col-12 col-md-9 mb-3 mb-md-0">
+            <h1 class="mt-2" style="font-size: 1.5rem; font-weight: 500 !important;">{{ project.title }}</h1>
+            
+            <p class="mt-3" style="font-size: 1rem;">
+                {% for author in project.authors %}
+                    {% if author == "Ruoxi Shang" %}
+                        <b>{{ author }}</b>
+                    {% else %}
+                        {{ author }}
+                    {% endif %}
+                    {% unless forloop.last %}, {% endunless %}
+                {% endfor %}
+            </p>
+
+            <p class="mt-2" style="font-size: 0.9rem; font-style: italic;">{{ project.status }}</p>
+            
+            <div class="mt-4">
+                <h2 style="font-size: 1.1rem; font-weight: 500;">Abstract</h2>
+                <p style="font-size: 1rem;">{{ project.abstract }}</p>
+            </div>
+
+            <div class="mt-4">
+                {% if project.pdf %}
+                <a href="{{ project.pdf }}" class="me-3">
+                    <i class="fa-solid fa-file-pdf"></i> PDF
+                </a>
+                {% endif %}
+                
+                {% if project.github %}
+                <a href="{{ project.github }}" class="me-3">
+                    <i class="fa-brands fa-github"></i> GitHub
+                </a>
+                {% endif %}
+            </div>
         </div>
     </div>
+
+    {% if project.slides %}
+    <div class="row mt-5">
+        <div class="col-12">
+            <h2 style="font-size: 1.1rem; font-weight: 500;">Project Slides</h2>
+            <div class="mt-3 position-relative" style="padding-bottom: 56.25%; height: 0; overflow: hidden;">
+                <iframe 
+                    style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border: 1px solid rgba(0, 0, 0, 0.1);" 
+                    src="{{ project.slides }}"
+                    allowfullscreen>
+                </iframe>
+            </div>
+        </div>
+    </div>
+    {% endif %}
 </div>
