--- a/_layouts/project-detail.html
+++ b/_layouts/project-detail.html
@@ -49,13 +49,23 @@ layout: default
         <div class="col-12">
             <h2 style="font-size: 1.1rem; font-weight: 500;">Project Slides</h2>
             <div class="mt-3 position-relative" style="padding-bottom: 56.25%; height: 0; overflow: hidden;">
-                <iframe 
-                    style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border: 1px solid rgba(0, 0, 0, 0.1);" 
-                    src="{{ project.slides }}"
-                    allowfullscreen>
-                </iframe>
+                {% if project.slides contains 'figma.com' %}
+                    <iframe 
+                        style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border: 1px solid rgba(0, 0, 0, 0.1);" 
+                        src="{{ project.slides }}"
+                        allowfullscreen>
+                    </iframe>
+                {% else %}
+                    <iframe 
+                        style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border: 1px solid rgba(0, 0, 0, 0.1);" 
+                        src="{{ project.slides | relative_url }}"
+                        allowfullscreen>
+                    </iframe>
+                {% endif %}
             </div>
         </div>
     </div>
     {% endif %}
+
+
 </div>
