--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
   <nav class="navbar navbar-expand-md navbar-light py-4">
     <div class="container-fluid px-0">
       <a class="navbar-brand" href="/">
-        <h4 style="font-weight: 500 !important; padding-top: 10px !important;">Ruoxi (Anna) Shang | 商若曦</h4>
+        <h4 style="font-weight: 500 !important; padding-top: 10px !important;">Vikas Reddy</h4>
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -12,11 +12,11 @@
           <li class="nav-item">
             <a class="nav-link {% if page.url contains 'project' %} active {% endif %}" aria-current="page" href="/project">Project</a>
           </li>
-          <li class="nav-item">
+          <!-- <li class="nav-item">
             <a class="nav-link {% if page.url contains 'publication' %} active {% endif %}" aria-current="page" href="/publication">Publication</a>
-          </li>
+          </li> -->
           <li class="nav-item">
-            <a class="nav-link {% if page.url contains 'cv' %} active {% endif %}" aria-current="page" href="/cv">CV</a>
+            <a class="nav-link {% if page.url contains 'cv' %} active {% endif %}" aria-current="page" href="/cv">Resume</a>
           </li>
         </ul>
       </div>
