--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="{{ '/assets/css/style.css' | relative_url }}">
 
   <!-- Fonts -->
-  <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+  <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap" rel="stylesheet">
@@ -26,13 +26,14 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
 
   <!-- Favicon -->
-  <link rel="apple-touch-icon" sizes="180x180" href=" {{ '/assets/images/main/favicon/apple-touch-icon.png' | relative_url }}">
-  <link rel="icon" type="image/png" sizes="32x32" href=" {{ '/assets/images/main/favicon/favicon-32x32.png' | relative_url }}">
-  <link rel="icon" type="image/png" sizes="16x16" href=" {{ '/assets/images/main/favicon/favicon-16x16.png' | relative_url }}">
-  <link rel="manifest" href=" {{ '/assets/images/main/favicon/site.webmanifest' | relative_url }}">
-  <link rel="mask-icon" href=" {{ '/assets/images/main/favicon/safari-pinned-tab.svg' | relative_url }}" color="#333333">
+  <link rel="apple-touch-icon" sizes="180x180" href=" {{ '/assets/images/main/favicon/new-apple-touch-icon.png' | relative_url }}">
+  <link rel="icon" type="image/png" sizes="32x32" href=" {{ '/assets/images/main/favicon/new-favicon-32x32.png' | relative_url }}">
+  <link rel="icon" type="image/png" sizes="16x16" href=" {{ '/assets/images/main/favicon/new-favicon-16x16.png' | relative_url }}">
+  <link rel="manifest" href=" {{ '/assets/images/main/favicon/new-site.webmanifest' | relative_url }}">
+  <link rel="mask-icon" href=" {{ '/assets/images/main/favicon/new-android-chrome-512x512.png' | relative_url }}" color="#333333">
   <meta name="msapplication-TileColor" content="#da532c">
   <meta name="theme-color" content="#ffffff">
+
 
   <!-- Opengraph -->
   <meta property="og:type" content="website">
