--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,7 +10,10 @@
       <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
         <ul class="navbar-nav ml-auto mt-4 mt-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
           <li class="nav-item">
-            <a class="nav-link {% if page.url contains 'project' %} active {% endif %}" aria-current="page" href="/project">Project</a>
+            <a class="nav-link " aria-current="page" href="/">Home</a>
+          </li> 
+          <li class="nav-item">
+            <a class="nav-link {% if page.url contains 'project' %} active {% endif %}" aria-current="page" href="/project">Projects</a>
           </li>
           <!-- <li class="nav-item">
             <a class="nav-link {% if page.url contains 'publication' %} active {% endif %}" aria-current="page" href="/publication">Publication</a>
