--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,9 +12,9 @@
           <li class="nav-item">
             <a class="nav-link " aria-current="page" href="/">Home</a>
           </li> 
-          <li class="nav-item">
+          <!-- <li class="nav-item">
             <a class="nav-link {% if page.url contains 'project' %} active {% endif %}" aria-current="page" href="/project">Projects</a>
-          </li>
+          </li> -->
           <!-- <li class="nav-item">
             <a class="nav-link {% if page.url contains 'publication' %} active {% endif %}" aria-current="page" href="/publication">Publication</a>
           </li> -->
